# sadp_binding

./: CMakeLists.txt  HelloCPP.cpp  README.md  WebcamStreamer.cpp  WebcamStreamer.h  binder.cpp  sadp_binding.sln  sadp_binding.vcxproj  sadp_binding.vcxproj.filters
HCSadpSDKV4.4.0.25/demo/win/: BindDev.cpp  BindDev.h  Config.cpp  Config.h  DlgActivateDevice.cpp  DlgActivateDevice.h  DlgAutoRequestInterval.cpp  DlgAutoRequestInterval.h  DlgCustom.cpp  DlgCustom.h  DlgEzvizToken.cpp  DlgEzvizToken.h  DlgHikSadp.cpp  DlgHikSadp.h  DlgInquiry.cpp  DlgInquiry.h  DlgResetPWEncrypt.cpp  DlgResetPWEncrypt.h  DlgResetPWGUID.cpp  DlgResetPWGUID.h  DlgResetPWPhone.cpp  DlgResetPWPhone.h  DlgRestPWDeviceCode.cpp  DlgRestPWDeviceCode.h  DlgRestoreInactive.cpp  DlgRestoreInactive.h  DlgSecurityQuestion.cpp  DlgSecurityQuestion.h  DlgSelfCheck.cpp  DlgSelfCheck.h  DlgSetFilterRule.cpp  DlgSetFilterRule.h  EhomeEnable.cpp  EhomeEnable.h  EzvizUnbind.cpp  EzvizUnbind.h  EzvizUnbindDelUser.cpp  EzvizUnbindDelUser.h  HCPlatformStatus.cpp  HCPlatformStatus.h  (+22 more)
HCSadpSDKV4.4.0.25/demo/win/res/: sadpdlg.rc2
HCSadpSDKV4.4.0.25/doc/: HCSadpSDK_Licenses_windows_linux.txt
HCSadpSDKV4.4.0.25/include/: Sadp.h
HCSadpSDKV4.4.0.25/lib/win64/: HCSadpSDK.xml  Sadp.lib
